# HeartOfMagic

./: .gitignore  .gitmodules  BuildRelease.ps1  Build_Config_Template.ps1  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DownloadExternalDeps.ps1  README.md  vcpkg-configuration.json  vcpkg.json
PrismaUI/views/SpellLearning/SpellLearningPanel/: browser-test.html  config-demo.html  dev-harness-bridge.js  dev-harness-toolbar.js  dev-harness.html  index.html  launch-dev-harness.bat  real-data-sim.html  run-tests.js  script.js  styles-skyrim.css  styles.css  test-runner.html  tree-preview.html  wheel-test.html
SKSE/Plugins/SpellLearning/SpellTreeBuilder/: config.py  server.py  (+11 more)
Scripts/Source/: DEST_ISL_PlayerSpellLearningScript.psc  SpellLearning.psc  SpellLearning_ISL.psc
Scripts/headers/: Activator.psc  ActiveMagicEffect.psc  Actor.psc  ActorBase.psc  Alias.psc  Ammo.psc  Armor.psc  ArmorAddon.psc  Art.psc  AssociationType.psc  Book.psc  Cell.psc  Class.psc  ColorForm.psc  CombatStyle.psc  CompanionsHousekeepingScript.psc  CompanionsRadiantQuest.psc  CompanionsStoryQuest.psc  DEST_AliasExt.psc  DarkBrotherhood.psc  Debug.psc  DialogueFollowerScript.psc  EffectShader.psc  Enchantment.psc  EncounterZone.psc  EquipSlot.psc  Explosion.psc  Faction.psc  Form.psc  FormList.psc  Game.psc  GlobalVariable.psc  HeadPart.psc  Idle.psc  ImageSpaceModifier.psc  ImpactDataSet.psc  Ingredient.psc  Key.psc  Keyword.psc  LeveledItem.psc  (+58 more)
addons/BookXP/: README.md
addons/BookXP/plugin/: CMakeLists.txt  CMakePresets.json  vcpkg.json
addons/BookXP/plugin/src/: Main.cpp  SpellLearningAPI.h
compatibility/DummyDEST/: CMakeLists.txt  vcpkg.json
compatibility/DummyDEST/src/: Main.cpp
docs/: ARCHITECTURE.md  DESIGN.md  MODULE_CONTRACTS.md  PLAN-PUBLIC-MODDER-API.md  SHARED-EFFECT-DESCRIPTION-ISSUE.md  TRANSLATING.md  TREE_BUILDING_SYSTEM.md  WINE-PROTON-PYTHON.md  WINE_PYTHON_IPC_ISSUE.md
docs/SPELL_LEARNING_JAVASCRIPT/: CPP_BRIDGE.md  FOUNDATION.md  GROWTH_MODES.md  LLM_INTEGRATION.md  README.md  RENDERERS.md  SETTINGS.md  TREE_BUILDING.md  UI_COMPONENTS.md
docs/audit/: JS_AUDIT_PERFORMANCE.md  PERF_PROGRESS.md  README.md
docs/refactor/: PHASE-1-SETTINGS-MODALS-THEME.md  PHASE-2-SETTINGS-HEART-TREEGEN.md  PHASE-3-SETTINGS-FINAL.md  PHASE-4-VISUAL-FIRST-BUILDER.md  PHASE-5-RENDERERS.md  PHASE-6-PROCEDURAL-PREREQ.md  PHASE-7-EDIT-VIEWER-GROWTH.md  PHASE-8-LAYOUT-CALLBACKS.md  PHASE-9-SCRIPT-GENERATION-LLM.md  README.md
docs/research/: TREE_GENERATION_RESEARCH.md
fomod/: ModuleConfig.xml  info.xml  info.xml.in
lab/SpellTreeViewer/: index.html  script.js  styles.css
lab/spell-tree-viewer/: app.js  index.html  renderer.js  spatial-hash.js
plugin/: BuildRelease.ps1  Build_Config_Template.ps1  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
plugin/cmake/: CompilerFlags.cmake  ExternalDependencies.cmake  Papyrus.cmake  Spriggit.cmake  commonlibsse.cmake
plugin/include/: PCH.h
plugin/src/: ISLIntegration.h  Main.cpp  PapyrusAPI.h  PassiveLearningSource.cpp  PassiveLearningSource.h  PrismaUI_API.h  ProgressionManager.cpp  ProgressionManager.h  PythonBridge.cpp  PythonBridge.h  PythonInstaller.cpp  PythonInstaller.h  SpellCastHandler.cpp  SpellEffectivenessHook.cpp  SpellEffectivenessHook.h  SpellScanner.cpp  SpellScanner.h  SpellTomeHook.cpp  SpellTomeHook.h  TreeBuilder.h  TreeBuilderClassic.cpp  TreeBuilderCore.cpp  TreeBuilderGraph.cpp  TreeBuilderOracle.cpp  TreeBuilderTree.cpp  TreeNLP.cpp  TreeNLP.h  UIManager.cpp  UIManager.h  WineDetect.h
plugins/: Common.h  PCH.h  PrismaUI_API.h
plugins/BookXP/: CMakeLists.txt  README.md
plugins/BookXP/src/: Main.cpp
plugins/DummyDEST/: CMakeLists.txt
plugins/DummyDEST/src/: Main.cpp
plugins/addons/BookXP/: CMakeLists.txt
plugins/addons/BookXP/src/: Main.cpp  PCH.h
plugins/cmake/: CompilerFlags.cmake  Distribution.cmake  Papyrus.cmake  commonlibsse.cmake
plugins/compatibility/DummyDEST/: CMakeLists.txt
plugins/spelllearning/: CMakeLists.txt
plugins/spelllearning/include/: EncodingUtils.h  PCH.h  PapyrusAPI.h  PassiveLearningSource.h  ProgressionManager.h  SimdKernels.h  SpellCastHandler.h  SpellCastXPSource.h  SpellEffectivenessHook.h  SpellScanner.h  SpellTomeHook.h  ThreadUtils.h  XPSource.h
plugins/spelllearning/include/treebuilder/: TreeBuilder.h  TreeBuilderInternal.h
plugins/spelllearning/include/uimanager/: UIManager.h  UIManagerInternal.h
plugins/spelllearning/src/: EncodingUtils.cpp  ISLIntegration.cpp  ISLIntegration.h  Main.cpp  OpenRouterAPI.cpp  OpenRouterAPI.h  PapyrusAPI.cpp  PassiveLearningSource.cpp  PassiveLearningSource.h  PrismaUI_API.h  ProgressionManager.h  SimdKernels-inl.h  SimdKernels.cpp  SpellCastXPSource.cpp  SpellCastXPSource.h  SpellEffectivenessHook.cpp  SpellEffectivenessHook.h  SpellLearningAPI.h  SpellScanner.cpp  SpellScanner.h  SpellTomeHook.cpp  SpellTomeHook.h  TreeBuilder.h  TreeBuilderClassic.cpp  TreeBuilderCore.cpp  TreeBuilderGraph.cpp  TreeBuilderInternal.h  TreeBuilderOracle.cpp  TreeBuilderThematic.cpp  TreeBuilderThemes.cpp  TreeBuilderTree.cpp  TreeNLP.cpp  TreeNLP.h  UIManager.cpp  UIManager.h  XPSource.h
plugins/spelllearning/src/progressionmanager/: ProgressionManagerAPI.cpp  ProgressionManagerCore.cpp  ProgressionManagerSerialization.cpp  ProgressionManagerTargets.cpp  ProgressionManagerXP.cpp
plugins/spelllearning/src/spelleffectiveness/: SpellEffectivenessHookCore.cpp  SpellEffectivenessHookDisplay.cpp  SpellEffectivenessHookGrant.cpp
plugins/spelllearning/src/spellscanner/: SpellScannerFormId.cpp  SpellScannerHelpers.cpp  SpellScannerScan.cpp
plugins/spelllearning/src/treebuilder/: TreeBuilderClassic.cpp  TreeBuilderCore.cpp  TreeBuilderGraph.cpp  TreeBuilderOracle.cpp  TreeBuilderThematic.cpp  TreeBuilderThemes.cpp  TreeBuilderTree.cpp  TreeNLP.cpp
plugins/spelllearning/src/uimanager/: UIManagerConfig.cpp  UIManagerCore.cpp  UIManagerIO.cpp  UIManagerLLM.cpp  UIManagerNotify.cpp  UIManagerProgression.cpp  UIManagerScanner.cpp  UIManagerTree.cpp
tools/: CMakeLists.txt  treebuilder-test.cpp
tools/include/: Common.h  PCH.h
(+233 files in other folders)
